# hson-lvl

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  app.cpp  app.h  he-level.cpp  pch.h
src/app/: applistener.h  camera-service.cpp  camera-service.h  cleaner-service.cpp  cleaner-service.h  debug-visual-service.cpp  debug-visual-service.h  file-dialog-service.cpp  file-dialog-service.h  model-service.cpp  model-service.h  object-selection-manager.cpp  object-selection-manager.h  object-service.cpp  object-service.h  project-manager.cpp  project-manager.h  resource-manager.cpp  resource-manager.h  settings-manager.cpp  settings-manager.h  template-manager.cpp  template-manager.h
src/app/resources/: res-model.cpp  res-model.h  resource.h
src/app/template/: sq-funcs.cpp  sq-funcs.h  sq-types.h  squirrelwrap.cpp  squirrelwrap.h  template.cpp  template.h
src/graphics/: basemodel.cpp  basemodel.h  camera.h  graphics.cpp  graphics.h  instancedmodel.cpp  instancedmodel.h  model.cpp  model.h
src/graphics/fonts/: Inter.h
src/graphics/shaders/: color_ps.frag  color_ps.h  color_vs.h  color_vs.vert  instance_vs.h  instance_vs.vert  ps.frag  ps.h  vs.h  vs.vert
src/math/: mat.h
src/panels/: layer-properties.cpp  layer-properties.h  object-inspector.cpp  object-inspector.h  object-library.cpp  object-library.h  object-list.cpp  object-list.h  settings.cpp  settings.h  viewport.cpp  viewport.h
src/ui/: panel.cpp  panel.h  toolbar.h
src/ui/editors/: basic.cpp  basic.h  glm.cpp  glm.h
src/utilities/: hson.cpp  hson.h  namehash.h
templates/generations/: hson.json
templates/generations/src/: AirSpring.nut  DashPanel.nut  DashRing.nut  Spring.nut  SpringClassic.nut  SpringClassicYellow.nut  SpringFake.nut
templates/rangers/src/: DashPanel.nut  FallDeadTrigger.nut  JumpBoard.nut  Ring.nut  Spring.nut
